--- a/css/index/style.css
+++ b/css/index/style.css
@@ -9,22 +9,25 @@ html, body {
   background-image: linear-gradient(#B367FF, #A64CFF);
 }
 
- .esquerda {
+.esquerda {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
+
 @media (min-width: 768px) {
-  .esquerda{
+  .esquerda {
     width: 750px;
   }
 }
+
 @media (min-width: 992px) {
   .esquerda {
     width: 970px;
   }
 }
+
 @media (min-width: 1200px) {
   .esquerda {
     width: 1170px;
@@ -194,7 +197,7 @@ html, body {
 }
 
 .conheca:hover {
-  color: #1A0044;
+  color: #9134ee;
 }
 
 .criar-conta {
@@ -205,7 +208,7 @@ html, body {
 }
 
 .criar-conta:hover {
-  color: #1A0044;
+  color: #9134ee;
   cursor: pointer;
 }
 
@@ -213,7 +216,6 @@ html, body {
   width: 60%;
   margin: 0px 160px;
   box-sizing: border-box;
-  border: 1px solid red;
   display: block;
   justify-content: center;
   align-items: center;
@@ -235,13 +237,14 @@ html, body {
   width: 350px;
   height: 340px;
 }
+
 .couch {
-  height: 330px;
+  height: 325px;
 }
 
 @media (min-height: 947px) {
   .couch {
-    height: 600px;
+    height: 595px;
   }
 }
 
@@ -249,6 +252,115 @@ html, body {
   margin-top: 32%;
 }
 
-.center-esquerda{
+.center-esquerda {
   margin-top: -50px;
 }
+
+.login-register {
+  outline-style: none;
+  background: white;
+  color: #1A0044;
+  font-size: 15px;
+  font-weight: bold;
+  border: none;
+  border-radius: 40px;
+  width: 150px;
+  height: 40px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
+}
+
+.login-register:hover {
+  box-shadow: 0px 4px 20px white
+}
+
+.login-register:focus {
+  background-color: #B367FF;
+}
+
+.nossos-servicos-title {
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+.buttons-right {
+  position: absolute;
+  right: 0;
+}
+
+@media (min-width: 1431px) {
+  .buttons-right {
+    margin-right: 4%;
+  }
+}
+
+.button-left {
+  margin-right: 10px;
+}
+
+.conteudo-segunda {
+  margin-top: 8%;
+  text-align: center;
+}
+
+.card-services {
+  display: inline-block;
+  background: #9B36FF;
+  box-shadow: 10px 10px 11px -1px rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  width: 200px;
+  height: 250px;
+  line-height: 250px;
+  text-align: center;
+  margin-right: 30px;
+  z-index: 14;
+}
+
+.card-title{
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.image-aquario {
+  height: 230px;
+  padding-bottom: 2px;
+}
+
+.segundo-image-right{
+  float: right;
+}
+
+@media (min-height: 670px) {
+  .image-aquario {
+    height: 320px;
+  }
+}
+
+@media (min-height: 947px) {
+  .image-aquario {
+    height: 320px;
+    margin-top: 150px;
+  }
+}
+
+@media (min-width: 1431px) {
+  .image-aquario {
+    margin-right: 100px;
+  }
+}
+
+@media (min-height: 670px) {
+  .image-patas {
+    height: 250px;
+  }
+}
+
+@media (min-height: 947px) {
+  .image-patas {
+    height: 250px;
+    margin-top: 220px;
+  }
+}
+
+
