--- a/css/index/style.css
+++ b/css/index/style.css
@@ -178,6 +178,7 @@ html, body {
   width: 150px;
   height: 40px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .login:hover {
@@ -197,7 +198,7 @@ html, body {
 }
 
 .conheca:hover {
-  color: #9134ee;
+  color: lightseagreen;
 }
 
 .criar-conta {
@@ -208,7 +209,7 @@ html, body {
 }
 
 .criar-conta:hover {
-  color: #9134ee;
+  color: lightseagreen;
   cursor: pointer;
 }
 
@@ -240,6 +241,26 @@ html, body {
 
 .couch {
   height: 325px;
+  margin-top: 14%;
+}
+
+
+@media screen and (max-width: 1380px){
+  .couch{
+    margin-top: 18.5%;
+  }
+}
+
+@media screen and (max-width: 1080px){
+  .couch{
+    margin-top: 28.5%;
+  }
+}
+
+@media screen and (max-width: 950px){
+  .couch{
+    margin-top: 36%;
+  }
 }
 
 @media (min-height: 947px) {
@@ -267,6 +288,7 @@ html, body {
   width: 150px;
   height: 40px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .login-register:hover {
@@ -320,6 +342,10 @@ html, body {
   color: white;
   font-weight: bold;
   font-size: 20px;
+}
+
+.image-patas{
+  margin-top: 3%;
 }
 
 .image-aquario {
