--- a/css/index/style.css
+++ b/css/index/style.css
@@ -182,7 +182,7 @@ html, body {
 }
 
 .login:hover {
-  box-shadow: 0px 4px 20px white
+  box-shadow: 0px 4px 20px white;
 }
 
 .login:focus {
@@ -198,7 +198,7 @@ html, body {
 }
 
 .conheca:hover {
-  color: lightseagreen;
+  color: #7241a3;
 }
 
 .criar-conta {
@@ -209,7 +209,7 @@ html, body {
 }
 
 .criar-conta:hover {
-  color: lightseagreen;
+  color: #7241a3;
   cursor: pointer;
 }
 
@@ -241,26 +241,6 @@ html, body {
 
 .couch {
   height: 325px;
-  margin-top: 14%;
-}
-
-
-@media screen and (max-width: 1380px){
-  .couch{
-    margin-top: 18.5%;
-  }
-}
-
-@media screen and (max-width: 1080px){
-  .couch{
-    margin-top: 28.5%;
-  }
-}
-
-@media screen and (max-width: 950px){
-  .couch{
-    margin-top: 36%;
-  }
 }
 
 @media (min-height: 947px) {
@@ -342,10 +322,6 @@ html, body {
   color: white;
   font-weight: bold;
   font-size: 20px;
-}
-
-.image-patas{
-  margin-top: 3%;
 }
 
 .image-aquario {
