--- a/css/agendamento/style.css
+++ b/css/agendamento/style.css
@@ -116,11 +116,11 @@ section.agendamento .form-wraper input[type=text], input[type=time], input[type=
 }
 
 section.agendamento .form-wraper input[type=text]:hover, input[type=time]:hover, input[type=date]:hover, select:hover{
-    border: 5px solid #597bff ;
+    border: 5px solid white ;
 }
 
 section.agendamento .form-wraper input[type=text]:focus, input[type=time]:focus, input[type=date]:focus, select:focus{
-    border: 5px solid #597bff ;
+    border: 5px solid white ;
 }
 
 section.agendamento ::placeholder{
@@ -224,12 +224,12 @@ section.agendamento .form-wraper select{
 }
 
 section.agendamento textarea:hover{
-    border: 5px solid #597bff;
+    border: 5px solid white;
     font-size: 17px;
 }
 
 section.agendamento textarea:focus{
-    border: 5px solid #597bff;
+    border: 5px solid white;
 }
 
 section.agendamento textarea::placeholder{
@@ -250,17 +250,19 @@ section.agendamento textarea::-moz-placeholder, input[type=text]::-moz-placehold
     border-radius: 25px;
     border: none;
     color: white;
-    background-color: #5914fa;
+    background-color: #B367FF;
     cursor: pointer;
     -webkit-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
     -moz-box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
     box-shadow: 3px 5px 14px 0px rgba(0,0,0,0.51);
     margin-top: 20px;
+    outline-style: none;
 }
 
 
 .form-wraper input[type=submit]:hover{
-    background-color: #5f09b5;
+    background-color: #B367FF;
+    box-shadow: 0px 4px 20px white;
 }
 
 
@@ -277,5 +279,5 @@ section.agendamento .voltar a{
 }
 
 section.agendamento .voltar a:hover{
-    color: lightseagreen;
+    color: #B367FF;
 }
